fix bugs on mobile and desktop

--- a/css/style.css
+++ b/css/style.css
@@ -30,21 +30,25 @@ body {
     background-image: linear-gradient(to right bottom, rgba(13, 20, 59, 0.8), rgba(88, 184, 64, 0.8)), url(../assets/terna.jpeg);
     background-size: cover;
     background-position: top;
+    width: 100%;
     height: 50vh;
     border-bottom: 1px solid var(--main-bg-color);
 }
 
 .nav {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
     padding: 1rem 3rem;
+    /* background-color: rgba(0, 0, 255, .5); */
+    background-color: rgba(13, 20, 59, .5);
 }
 
 .nav--link {
+    font-size: 1.7rem;
+    color: #fff;
     text-decoration: none;
-}
-
-.logo {
-    width: 10%;
 }
 
 .social--icon,
@@ -53,23 +57,19 @@ body {
     list-style-type: none;
 }
 
-.main {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   margin: 3rem 5rem;
+.logo {
+    width: 5rem;
+    height: auto;
 }
 
-.profile--image {
-    width: 40%;
-    border-radius: 50%;
-    margin-top: 2rem;
+.header--text {
+    padding: .5rem 2rem;
 }
 
 .hello--text {
     display: block;
     font-size: 2.5rem;
+    padding: .5rem 2rem;
     letter-spacing: .3rem;
     font-weight: 700;
     color: var(--main-bg-color);
@@ -83,6 +83,16 @@ body {
 .paragraph--text__white {
     color: var(--color-teriary-2);
     text-shadow: lawngreen;
+}
+
+.main {
+   padding: .5rem 2rem;
+}
+
+.profile--image {
+    width: 40%;
+    border-radius: 50%;
+    margin-top: 2rem;
 }
 
 .profile--container {
@@ -118,10 +128,6 @@ body {
     font-size: 2.5rem;
 }
 
-.project--container {
-    margin: .5rem 1.5rem;
-}
-
 .bd-bottom {
     border-bottom: 2px solid tomato;
 }
@@ -139,8 +145,8 @@ body {
 
 .projects--content {
     color: var(--color-tertiary);
-    width: 50rem;
-    height: 20rem;
+    width: 100%;
+    height: auto;
     border-radius: .5rem;
     background-color: var(--main-bg-color);
     padding: 1.5rem 5rem;
@@ -179,12 +185,17 @@ body {
     color: var(--color-secondary);
 }
 
+.project--link {
+    text-decoration: none;
+    color: var(--color-primary);
+}
+
 .view--icon--listItem {
     margin-right: 8rem;
 }
 
 .contact--form {
-    padding: 2rem 8rem;
+    padding: 5rem 5rem;
     margin-top: 3rem;
     background-color: var(--main-bg-color);
     border-radius: .5rem;
@@ -237,8 +248,10 @@ body {
     padding: 1.5rem 2rem;
     border-radius: .5rem;
     width: 100%;
+    font-family: inherit;
     border: none;
     outline: none;
+    border-bottom: 3px solid transparent;
 }
 
 .textarea:focus {
@@ -271,15 +284,31 @@ body {
     font-size: 1.7rem;
 }
 
-@media only screen and (min-width: 768px) {
+.arrowUp {
+    position: fixed;
+    bottom: 0;
+    right: 1rem;
+    padding: 2rem 2rem;
+    border-radius: 50%;
+    background-color: var(--main-bg-color);
+}
+
+.fa-arrow-circle-up {
+    font-size: 2.5rem;
+}
+
+
+/* Tablet screen size */
+@media screen and (min-width: 768px) {
     html {
-        font-size: 62.5%;
+        font-size: 56.25%;
     }
 
     .nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
     }
 
     .logo {
@@ -288,10 +317,10 @@ body {
 
     .nav--list {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
+        margin-left: auto;
         font-size: 2rem;
-        margin-right: 10rem;
     }
     
     .nav--list__item:not(:last-child) {
@@ -303,6 +332,25 @@ body {
 
     .nav--link:hover {
         border-bottom: 2px solid tomato;
+    }
+
+    
+
+}
+
+/* Desktop screen size */
+@media screen and (min-width: 1200px) {
+
+    html {
+        font-size: 62.5%;
+    }
+
+    .nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        background: none;
     }
 
     .header--text {
@@ -355,6 +403,14 @@ body {
 
     .contact--form {
         padding: 5rem 10rem;
+    }
+
+    .arrowUp {
+        right: 1rem;
+    }
+    
+    .fa-arrow-circle-up {
+        font-size: 3rem;
     }
 
 }
